@@ -1,5 +1,7 @@
 0.12.9
  - fix: twisted error message upon SHA-256 upload verification (#73)
+ - fix: user_show raised unexpected APINotFoundError in wizard
+ - enh: add ``__repr__`` for ``CKANAPI``
  - ref: introduce `CKANAPI.ckan_version_object` fetching the CKAN version
 0.12.8:
  - fix: set row count to zero when all jobs are removed from upload queue
